test/errors/extended_members_error/zs/extended_in_union_error.zs
package extended_in_union_error;

union Extended
{
    uint32 field1;
    extend string field2;
};
